--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <htmml>
     <head>
         <Title>Paralax Effect Practice</Title>
+        <link rel="icon" type="image/x-icon" href="kpc.ico">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
