--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<htmml>
+<html>
     <head>
         <Title>Paralax Effect Practice</Title>
-        <link rel="icon" type="image/x-icon" href="kpc.ico">
+
+        <link rel="icon" href= "kpc.ico" type="image/x-icon">
+        
         <link rel="stylesheet" href="index.css">
+        
     </head>
     <body>
         <div class="wrapper">
@@ -62,4 +65,4 @@
             </div>
         </div>
     </body>
-</htmml>
+</html>
