--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <Title>Paralax Effect Practice</Title>
+        <Title>Adventure</Title>
 
         <link rel="icon" href= "kpc.ico" type="image/x-icon">
         
