--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <Title>Adventure</Title>
+        <Title>Paralax Effect Practice</Title>
 
         <link rel="icon" href= "kpc.ico" type="image/x-icon">
         
@@ -24,8 +24,9 @@
                     <h2 class="mh">Adventure Time!</h2>
                 </div> -->
                 <p class="text"><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nesciunt quae saepe, placeat aperiam repellat, architecto excepturi deserunt in ad distinctio quos alias facilis nulla libero laudantium incidunt nemo ipsum vitae. Corporis dolore iste, sint voluptatem cupiditate repellat amet corrupti!<br><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nesciunt quae saepe, placeat aperiam repellat, architecto excepturi deserunt in ad distinctio quos alias facilis nulla libero laudantium incidunt nemo ipsum vitae. Corporis dolore iste, sint voluptatem cupiditate repellat amet corrupti!<br><br>
+                    An adventure is an exciting experience or undertaking that is typically bold, sometimes risky.Adventures may be activities with danger such as traveling, exploring, skydiving, mountain climbing, scuba diving, river rafting, or other extreme sports. Adventures are often undertaken to create psychological arousal or in order to achieve a greater goal, such as the pursuit of knowledge that can only be obtained by such activities.<br><br>
+    
+                    As much as we love lounging on a faraway beach or revisiting our favorite city for the tenth time, sometimes our passports need some adventure travel—we’re talking about those once-in-a-lifetime trips that push us way outside our comfort zones. Adventure travel is a great way to see more of the world, while also testing your physical limits, and coming home with a lifetime's worth of stories to tell at parties.<br><br>
                 </p>
 
                 <div id="bg">
@@ -34,8 +35,21 @@
                     </div>
                 </div>
                 <p class="text"><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nesciunt quae saepe, placeat aperiam repellat, architecto excepturi deserunt in ad distinctio quos alias facilis nulla libero laudantium incidunt nemo ipsum vitae. Corporis dolore iste, sint voluptatem cupiditate repellat amet corrupti!<br><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nesciunt quae saepe, placeat aperiam repellat, architecto excepturi deserunt in ad distinctio quos alias facilis nulla libero laudantium incidunt nemo ipsum vitae. Corporis dolore iste, sint voluptatem cupiditate repellat amet corrupti!<br><br>
+                    Biking is a top-notch cardio workout. You’ll burn about 400 calories an hour. Plus it strengthens your lower body, including your legs, hips, and glutes.<br><br>
+
+                    If you want a workout that’s gentle on your back, hips, knees, and ankles, this is a great choice.<br><br>
+
+                    You can cycle on the road, a bike path, or a mountain trail. Indoors, you can do your workout on a stationary bike or buy a stand, called an indoor trainer, for your outdoor bike.<br><br>
+
+                    If you’re a beginner, choose a flat bike path or road. If you’re ready for a tougher workout that also engages your upper body and core, try mountain biking. It’s also called off-road biking. You can do it on trails and different types of rough terrain.<br><br>
+
+                    Mountain biking is trickier because you have to navigate hills and surfaces, so your upper body and core will kick into gear. It’s more of a total-body workout than biking on the road, which is mostly a lower-body cardio workout.<br><br>
+
+                    Plan to get on your bike and ride for 30-60 minutes, 3-5 days a week.<br><br>
+
+                    Start every ride with a warm-up. Pedal at a slow, easy pace for 5-10  minutes. Then boost your speed so you start to sweat. If you’re riding a stationary bike, simply change the settings for a faster pace.<br><br>
+
+                    When you’re ready to wrap things up, take an extra 5 minutes to cool down by cycling at a slower pace.<br><br>
                 </p>
 
                 <div id="bg">
@@ -46,8 +60,9 @@
                     </div>
                 </div>
                 <p class="text"><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nesciunt quae saepe, placeat aperiam repellat, architecto excepturi deserunt in ad distinctio quos alias facilis nulla libero laudantium incidunt nemo ipsum vitae. Corporis dolore iste, sint voluptatem cupiditate repellat amet corrupti!<br><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nesciunt quae saepe, placeat aperiam repellat, architecto excepturi deserunt in ad distinctio quos alias facilis nulla libero laudantium incidunt nemo ipsum vitae. Corporis dolore iste, sint voluptatem cupiditate repellat amet corrupti!<br><br>
+                    Paragliding is the recreational and competitive adventure sport of flying paragliders: lightweight, free-flying, foot-launched glider aircraft with no rigid primary structure.[1] The pilot sits in a harness or in a cocoon-like 'pod' suspended below a fabric wing. Wing shape is maintained by the suspension lines, the pressure of air entering vents in the front of the wing, and the aerodynamic forces of the air flowing over the outside.<br><br>
+
+                    Despite not using an engine, paraglider flights can last many hours and cover many hundreds of kilometres, though flights of one to five hours and covering some tens of kilometres are more the norm. By skillful exploitation of sources of lift, the pilot may gain height, often climbing to altitudes of a few thousand metres.<br><br>
                 </p>
 
 
@@ -59,8 +74,9 @@
                     </div>
                 </div>
                 <p class="text"><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nesciunt quae saepe, placeat aperiam repellat, architecto excepturi deserunt in ad distinctio quos alias facilis nulla libero laudantium incidunt nemo ipsum vitae. Corporis dolore iste, sint voluptatem cupiditate repellat amet corrupti!<br><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nesciunt quae saepe, placeat aperiam repellat, architecto excepturi deserunt in ad distinctio quos alias facilis nulla libero laudantium incidunt nemo ipsum vitae. Corporis dolore iste, sint voluptatem cupiditate repellat amet corrupti!<br><br>
+                    Surfing is a surface water sport in which an individual, a surfer (or two in tandem surfing), uses a board to ride on the forward section, or face, of a moving wave of water, which usually carries the surfer towards the shore. Waves suitable for surfing are primarily found on ocean shores, but can also be found in standing waves in the open ocean, in lakes, in rivers in the form of a tidal bore, or in wave pools.<br><br>
+
+                    The term surfing refers to a person riding a wave using a board, regardless of the stance. There are several types of boards. The Moche of Peru would often surf on reed craft, while the native peoples of the Pacific surfed waves on alaia, paipo, and other such water craft. Ancient cultures often surfed on their belly and knees, while the modern-day definition of surfing most often refers to a surfer riding a wave standing on a surfboard; this is also referred to as stand-up surfing.<br><br>
                 </p>
             </div>
         </div>
