--- a/index.html
+++ b/index.html
@@ -1,145 +1,7 @@
 <!DOCTYPE html>
 <htmml>
     <head>
-        <Title>Paralax Effect Practice</Title>
-
-        <style>
-            *{
-                margin:0 ;
-                padding: 0 ;
-                box-sizing: border-box;
-            }
-            .wrapper{
-                overflow-x: hidden;
-                overflow-y: auto;
-                object-fit: cover;
-                height:100vh ;
-                width:100% ;
-                perspective: 10px;
-
-            }
-            .wrapper::-webkit-scrollbar{
-                display: none;
-            }
-            .container{
-                display: flex;
-                position: relative;
-                height:100vh ;
-                width:100% ;
-                justify-content: center;
-                align-items: center ;
-                transform-style:preserve-3d ;
-                z-index:-1 ;
-            }
-            .fg,.bg{
-                position:absolute ;
-                z-index: -1;
-                object-fit: cover;
-                height:100% ;
-                width:100% ;
-            }
-            .fg{
-                transform:translateZ(-20px) scale(3);
-            }
-            .bg{
-                transform:translateZ(-30px) scale(4);
-            }
-            h1{
-                color:white ;
-                font-size: 20px;
-                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                margin-bottom: 230px;
-                text-shadow: 1px 1px black;
-
-            }
-
-            .section{
-                background-color: black;
-                color:antiquewhite;
-                width:100% ;
-                margin-top: 20px;
-                border:1px ;
-                border-radius: 10px;
-            }
-            #bg1,#bg2,#bg3{
-                object-fit: cover;
-                position:relative ;
-                width:98% ;
-                background-attachment: fixed;
-                background-size:cover ;
-                background-position: center;
-                height:500px ;
-                padding: 0 ;
-                box-sizing:border-box ;
-                display:flex;
-                justify-content: center;
-                align-items: center;
-                border: 10px;
-                border-color: solid black;
-                display:flex;
-                justify-content: center;
-                align-items: center;
-                margin-left: 1%;
-                border-radius: 10px;
-                
-            }
-            #bg1{
-                background-image: url(bg1.jpg);
-            }
-            #bg2{
-                background-image: url(bg2.jpg);
-            }
-            #bg3{
-                background-image: url(bg3.jpg);
-            }
-            .text{
-                margin:5px ;
-                margin-left: 1%;
-                font-size: 20px;
-            }
-            .bike,.pg,.surf{
-                color: black;
-                background-color: antiquewhite;
-                font-size: 70px;
-                border:1px ;
-                border-radius: 10px;
-                user-select: none;
-                
-            }
-            .mh{
-                font-size: 50px;
-                color:rgb(246, 239, 239) ;
-                background-color: rgb(165, 42, 42);
-                border-radius: 5px;
-            }
-            .mainhead{
-                display:flex;
-                justify-content: center;
-                align-items: center;
-                margin-bottom: -35px;
-                border:1px ;
-                border-radius: 10px;
-            }
-            h1:hover{
-                transform: scale(4);
-                transition-duration: 4s;
-                text-shadow: 1px 1px black, 5px 5px 5px rgb(237, 235, 230);
-                border: 1px;
-            }
-            .img:hover{
-                transform: scale(2);
-                transition-duration: 4s;
-                transition-delay: 0s;
-            }
-            /* #bg1:hover{
-                transform: scale(0.8);
-                transition-duration: 3s;
-                object-fit:cover;
-                background-attachment: fixed;
-                background-size:cover ;
-                background-position: center;
-            } */
-        </style>
+        <Title>Adventure</Title>
     </head>
     <body>
         <div class="wrapper">
