--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <htmml>
     <head>
         <Title>Adventure</Title>
+        <link rel="icon" href= "kpc.ico" type="image/x-icon">
+        
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div class="wrapper">
