--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <htmml>
     <head>
         <Title>Adventure</Title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href= "kpc.ico" type="image/x-icon">
         
         <link rel="stylesheet" href="index.css">
