--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Gallery</title>
     <link rel="shotcut icon"  href="gal.jpg" type="image/x-icon"></link>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="image index.css">
 
 </head>
 <body>
